--- a/_config.yml
+++ b/_config.yml
@@ -291,13 +291,17 @@ defaults:
       share: true
       related: true
       show_date: true
+      sidebar:
+        nav: docs
+
+  # _pages:
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      sidebar:
+        nav: docs
 
 date_format: "%Y.%m.%d"
-
-# _pages
-  # - scope
-  #     path: "_pages"
-  #     type: pages
-  #   values:
-  #     layout: single
-  #     author_profile: true
