--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,3 +10,24 @@ main:
   #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
+
+
+docs:
+  - title: Study
+    children:
+      - title: "JS"
+        url: /categories/#javascript
+      - title: "Node"
+        url: /categories/#node-js
+      - title: "Network"
+        url: /categories/#network
+      - title: "AWS"
+        url: /categories/#aws
+      - title: "Docker"
+        url: /categories/#docker
+      - title: "Git"
+        url: /categories/#git
+  - title: Project
+    children:
+      - title: "Simple-crawling"
+        url: /categories/#simple-crawling
